--- a/.github/workflows/bettergaming.yml
+++ b/.github/workflows/bettergaming.yml
@@ -2,6 +2,8 @@ on:
   push: 
     branches: 
       - main
+    paths:
+      - BetterGaming/**
 name: "🚀 Deploy BetterGaming"
 jobs:
   web-deploy:
